--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.3.0
   get: ^4.6.5
   lottie: ^2.3.0
+  flutter_svg: ^2.0.4
 
 dev_dependencies:
   flutter_test:
