--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_svg: ^2.0.4
   connectivity_plus: ^3.0.3
   app_settings: ^4.2.0
+  get_storage: ^2.1.1
+  curved_navigation_bar: ^1.0.3
+  image_picker: ^0.8.7
 
 dev_dependencies:
   flutter_test:
