--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   get_storage: ^2.1.1
   curved_navigation_bar: ^1.0.3
   image_picker: ^0.8.7
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
