--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,6 +49,9 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   image_picker: ^0.8.7
   cached_network_image: ^3.2.3
+  qr_flutter: ^4.0.0
+  path_provider: ^2.0.14
+  image: ^4.0.16
 
 dev_dependencies:
   flutter_test:
