--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   qr_flutter: ^4.0.0
   path_provider: ^2.0.14
   image: ^4.0.16
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
