--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   path_provider: ^2.0.14
   image: ^4.0.16
   flutter_barcode_scanner: ^2.0.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
